<resources>
    <string name="app_name">thmostautisticcamera</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="Go_to_Calendar">Go To Calendar</string>
    <string name="go_back_to_scanner">Go back to scanner</string>
    <string name="enter_name">Enter name</string>
    <string name="text_recognition_tool">Text Recognition Tool</string>
    <string name="image">Select Image</string>
    <string name="recognized_text_will_appear_here">Recognized text will appear here</string>
    <string name="todo">TODO</string>
    <string name="go_to_calendar">Go to Calendar</string>
</resources>